--- a/RNN/LSTM-Sentiment.ipynb
+++ b/RNN/LSTM-Sentiment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM10Jcu/n51sOu/LyEw8ptV"
+      "authorship_tag": "ABX9TyPD9AVBSBf8RtsSZzmNHRjV"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,8 +18,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Sentiment Analysis**"
+      ],
+      "metadata": {
+        "id": "JhAzmEMGvGBv"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "61ePRnyT8iqv",
         "outputId": "84a01130-856c-4955-8467-f4adfde2e5f9",
@@ -85,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +126,7 @@
           "height": 206
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +419,7 @@
       "metadata": {
         "id": "gLnQ_3R7nsYh"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -475,7 +484,7 @@
       "metadata": {
         "id": "bmw50Wx-9Qb4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +549,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +598,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +630,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +691,7 @@
           "height": 294
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -712,7 +721,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +748,7 @@
           "height": 174
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
