--- a/tweets/tweets - topic modelling2.ipynb
+++ b/tweets/tweets - topic modelling2.ipynb
@@ -162,10 +162,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "JJ7IHZIWiBNQ",
-        "outputId": "202fa816-1548-424c-b8d3-ee26c249bd2c",
+        "outputId": "2dbf2163-7c9d-4e0e-b160-821b2597dff4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -177,21 +177,21 @@
           "text": [
             "-------------------\n",
             "Token:  None\n",
-            "('https://api.twitter.com/2/tweets/search/recent', {'query': 'to:EmiratesSupport lang:en', 'start_time': '2022-11-10T13:15:00Z', 'end_time': '2022-11-17T02:00:00Z', 'max_results': 100, 'expansions': 'author_id,in_reply_to_user_id,geo.place_id', 'tweet.fields': 'id,text,author_id,in_reply_to_user_id,geo,conversation_id,created_at,lang,public_metrics,referenced_tweets,reply_settings,source', 'user.fields': 'id,name,username,created_at,description,public_metrics,verified', 'place.fields': 'full_name,id,country,country_code,geo,name,place_type', 'next_token': {}})\n",
-            "Endpoint Response Code: 200\n",
-            "Next Token:  b26v89c19zqg8o3fpzhjmykog9by3uq7n3yn0x4rlfqt9\n",
-            "Start Date:  2022-11-10T13:15:00Z\n",
-            "# of Tweets added from this response:  98\n",
-            "Total # of Tweets added:  98\n",
-            "-------------------\n",
-            "-------------------\n",
-            "Token:  b26v89c19zqg8o3fpzhjmykog9by3uq7n3yn0x4rlfqt9\n",
-            "('https://api.twitter.com/2/tweets/search/recent', {'query': 'to:EmiratesSupport lang:en', 'start_time': '2022-11-10T13:15:00Z', 'end_time': '2022-11-17T02:00:00Z', 'max_results': 100, 'expansions': 'author_id,in_reply_to_user_id,geo.place_id', 'tweet.fields': 'id,text,author_id,in_reply_to_user_id,geo,conversation_id,created_at,lang,public_metrics,referenced_tweets,reply_settings,source', 'user.fields': 'id,name,username,created_at,description,public_metrics,verified', 'place.fields': 'full_name,id,country,country_code,geo,name,place_type', 'next_token': {}})\n",
+            "('https://api.twitter.com/2/tweets/search/recent', {'query': 'to:EmiratesSupport lang:en', 'start_time': '2022-11-17T02:00:00Z', 'end_time': '2022-11-19T19:00:00Z', 'max_results': 100, 'expansions': 'author_id,in_reply_to_user_id,geo.place_id', 'tweet.fields': 'id,text,author_id,in_reply_to_user_id,geo,conversation_id,created_at,lang,public_metrics,referenced_tweets,reply_settings,source', 'user.fields': 'id,name,username,created_at,description,public_metrics,verified', 'place.fields': 'full_name,id,country,country_code,geo,name,place_type', 'next_token': {}})\n",
             "Endpoint Response Code: 200\n",
             "-------------------\n",
-            "Start Date:  2022-11-10T13:15:00Z\n",
-            "# of Tweets added from this response:  27\n",
-            "Total # of Tweets added:  125\n",
+            "Start Date:  2022-11-17T02:00:00Z\n",
+            "# of Tweets added from this response:  56\n",
+            "Total # of Tweets added:  56\n",
+            "-------------------\n",
+            "-------------------\n",
+            "Token:  None\n",
+            "('https://api.twitter.com/2/tweets/search/recent', {'query': 'to:EmiratesSupport lang:en', 'start_time': '2022-11-17T02:00:00Z', 'end_time': '2022-11-19T19:00:00Z', 'max_results': 100, 'expansions': 'author_id,in_reply_to_user_id,geo.place_id', 'tweet.fields': 'id,text,author_id,in_reply_to_user_id,geo,conversation_id,created_at,lang,public_metrics,referenced_tweets,reply_settings,source', 'user.fields': 'id,name,username,created_at,description,public_metrics,verified', 'place.fields': 'full_name,id,country,country_code,geo,name,place_type', 'next_token': {}})\n",
+            "Endpoint Response Code: 200\n",
+            "-------------------\n",
+            "Start Date:  2022-11-17T02:00:00Z\n",
+            "# of Tweets added from this response:  56\n",
+            "Total # of Tweets added:  112\n",
             "-------------------\n"
           ]
         }
@@ -201,7 +201,7 @@
         "total_tweets = 0\n",
         "\n",
         "# Create file\n",
-        "csvFile = open(\"ek_tweets5.csv\", \"a\", newline=\"\", encoding='utf-8')\n",
+        "csvFile = open(\"ek_tweets6.csv\", \"a\", newline=\"\", encoding='utf-8')\n",
         "csvWriter = csv.writer(csvFile)\n",
         "\n",
         "#Create headers for the data you want to save, in this example, we only want save these columns in our dataset\n",
@@ -217,8 +217,8 @@
         "bearer_token = auth()\n",
         "headers = create_headers(bearer_token)\n",
         "keyword = \"to:EmiratesSupport lang:en\"\n",
-        "start_time = \"2022-11-10T13:15:00Z\"\n",
-        "end_time = \"2022-11-17T02:00:00Z\"\n",
+        "start_time = \"2022-11-17T02:00:00Z\"\n",
+        "end_time = \"2022-11-19T19:00:00Z\"\n",
         "\n",
         "# Check if flag is true\n",
         "while flag:\n",
@@ -238,7 +238,7 @@
         "        print(\"Next Token: \", next_token)\n",
         "        if result_count is not None and result_count > 0 and next_token is not None:\n",
         "            print(\"Start Date: \", start_time)\n",
-        "            append_to_csv(json_response, \"ek_tweets5.csv\")\n",
+        "            append_to_csv(json_response, \"ek_tweets6.csv\")\n",
         "            count += result_count\n",
         "            total_tweets += result_count\n",
         "            print(\"Total # of Tweets added: \", total_tweets)\n",
@@ -249,7 +249,7 @@
         "        if result_count is not None and result_count > 0:\n",
         "            print(\"-------------------\")\n",
         "            print(\"Start Date: \", start_time)\n",
-        "            append_to_csv(json_response, \"ek_tweets5.csv\")\n",
+        "            append_to_csv(json_response, \"ek_tweets6.csv\")\n",
         "            count += result_count\n",
         "            total_tweets += result_count\n",
         "            print(\"Total # of Tweets added: \", total_tweets)\n",
@@ -260,13 +260,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "Uzxfto2liBNS"
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('ek_tweets5.csv')"
+        "df = pd.read_csv('ek_tweets6.csv')"
       ]
     },
     {
@@ -525,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "6d5YY3FuiBNT"
       },
@@ -536,10 +536,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "UGPJMA0SiBNT",
-        "outputId": "4cc8a7bf-35bc-4dc5-cf0e-54a5afe1de2b",
+        "outputId": "5172e9a3-46db-43a1-e52e-d88513c48033",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -549,11 +549,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(878, 11)"
+              "(934, 11)"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ],
       "source": [
@@ -562,13 +562,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "mI68GITiiBNU"
       },
       "outputs": [],
       "source": [
-        "_df.to_csv('ek_tweets6.csv',index= False)"
+        "_df.to_csv('ek_tweets7.csv',index= False)"
       ]
     },
     {
