--- a/tweets/tweets - topic modelling2.ipynb
+++ b/tweets/tweets - topic modelling2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "HilI1mqRiBNI"
       },
@@ -28,19 +28,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "8ArgxR04iBNM"
       },
       "outputs": [],
       "source": [
         "def auth():\n",
-        "    return 'AAAAAAAAAAAAAAAAAAAAAGlSiAEAAAAAlcvjtM%2BTv7wmNxmxCEyjqiuM0EA%3DmDEUPgzu3bKQguhLuhN8DrO6NcFNh5LZGDFD50CE8VoRgFhJiI'"
+        "    return ''"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "h26dGa94iBNN"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "XFxSREoRiBNN"
       },
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "6bBvRgW9iBNO"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "E9AcKm3RiBNP"
       },
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "JJ7IHZIWiBNQ",
         "outputId": "2dbf2163-7c9d-4e0e-b160-821b2597dff4",
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "Uzxfto2liBNS"
       },
@@ -525,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "6d5YY3FuiBNT"
       },
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "UGPJMA0SiBNT",
         "outputId": "5172e9a3-46db-43a1-e52e-d88513c48033",
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "mI68GITiiBNU"
       },
